--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						+353 873206963
 					</div>  <!-- end .header-contact -->
 				</div> <!-- end .header-contacts -->
-				<a href="" class="responsive-menu-open">Menu <i class="fa fa-bars"></i></a>
+				<a href="" class="responsive-menu-open"> <i class="fa fa-bars"></i></a>
 			</div> <!-- end .container -->
 
 			<div class="main-header clearfix">
@@ -118,7 +118,7 @@
 <!--						<p></p>-->
 					</div> <!-- end .caption -->
 				</div>
-				<div style="background-image: url('images/index_slider_1.jpg');">
+				<div style="background-image: url('images/index_image_7.jpg');">
 					<div class="caption blue">
 						<h4>Excellent first time Pass Rate.</h4>
 						<p>It doesn’t matter if you’re a beginner or veteran driver, Master driving school can help you pass your full test and get your license!</p>
@@ -389,53 +389,53 @@
 					</div> <!-- end .heading -->
 					<div class="row">
 						<div class="col-sm-3">
+							<div class="pricing-table pink">
+								<div class="inner">
+									<div class="pricing-table-price">
+										<div class="inner">
+											<span>€40</span>
+										</div> <!-- end .inner -->
+									</div> <!-- end .pricing-table-price -->
+									<div class="pricing-table-heading">
+										INDIVIDUAL <small>LESSONS</small>
+									</div> <!-- end .pricing-table-heading -->
+									<div class="pricing-table-features">
+										<ul class="list-unstyled">
+											<li>1 HOUR LESSON</li>
+											<li>Pre-test preparation</li>
+											<li>Mock test</li>
+											<li>Free Vehicle Check</li>
+											<li>Route familiarisation</li>
+										</ul>
+									</div> <!-- end .pricing-table-features -->
+									<div class="pricing-table-button">
+										<a href="tel:+353893206963" class="button white border">Call Now</a>
+									</div> <!-- end .pricing-table-button -->
+								</div> <!-- end .inner -->
+							</div> <!-- end .pricing-table -->
+						</div> <!-- end .col-sm-4 -->
+						<div class="col-sm-3">
 							<div class="pricing-table blue">
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
-											<span>€200</span>
+											<span>€250</span>
 										</div> <!-- end .inner -->
 									</div> <!-- end .pricing-table-price -->
 									<div class="pricing-table-heading">
-										Basic<small>Monthly Fee</small>
+										REDUCED  <small>EDT</small>
 									</div> <!-- end .pricing-table-heading -->
 									<div class="pricing-table-features">
 										<ul class="list-unstyled">
-											<li>Free Form To Sign</li>
-											<li>2 Month Course</li>
-											<li>15 Video Classes</li>
-											<li>4 Hours Per Day</li>
-											<li>Weekly 2 Tests</li>
+											<li>6 LESSONS</li>
+											<li>Pre-test preparation</li>
+											<li>EDT syllabus 1,5,6,7,9 &10</li>
+											<li>Free Vehicle Check</li>
+											<li>Route familiarisation</li>
 										</ul>
 									</div> <!-- end .pricing-table-features -->
 									<div class="pricing-table-button">
-										<a href="" class="button white border">Join Now</a>
-									</div> <!-- end .pricing-table-button -->
-								</div> <!-- end .inner -->
-							</div> <!-- end .pricing-table -->
-						</div> <!-- end .col-sm-4 -->
-						<div class="col-sm-3">
-							<div class="pricing-table yellow">
-								<div class="inner">
-									<div class="pricing-table-price">
-										<div class="inner">
-											<span>€350</span>
-										</div> <!-- end .inner -->
-									</div> <!-- end .pricing-table-price -->
-									<div class="pricing-table-heading">
-										Standard<small>Monthly Fee</small>
-									</div> <!-- end .pricing-table-heading -->
-									<div class="pricing-table-features">
-										<ul class="list-unstyled">
-											<li>Free Form To Sign</li>
-											<li>3 Month Course</li>
-											<li>25 Video Classes</li>
-											<li>6 Hours Per Day</li>
-											<li>Weekly 2 Tests</li>
-										</ul>
-									</div> <!-- end .pricing-table-features -->
-									<div class="pricing-table-button">
-										<a href="" class="button dark">Join Now</a>
+										<a href="tel:+353893206963" class="button white border">Call Now</a>
 									</div> <!-- end .pricing-table-button -->
 								</div> <!-- end .inner -->
 							</div> <!-- end .pricing-table -->
@@ -449,19 +449,19 @@
 										</div> <!-- end .inner -->
 									</div> <!-- end .pricing-table-price -->
 									<div class="pricing-table-heading">
-										Unlimited<small>Monthly Fee</small>
+										COMPLETE <small>EDT</small>
 									</div> <!-- end .pricing-table-heading -->
 									<div class="pricing-table-features">
 										<ul class="list-unstyled">
-											<li>Free Form To Sign</li>
-											<li>5 Month Course</li>
-											<li>35 Video Classes</li>
-											<li>6 Hours Per Day</li>
-											<li>Weekly 3 Tests</li>
+											<li>12 LESSONS</li>
+											<li>Pre-test preparation</li>
+											<li>EDT syllabus 1 to 12</li>
+											<li>Free Vehicle Check</li>
+											<li>Route familiarisation</li>
 										</ul>
 									</div> <!-- end .pricing-table-features -->
 									<div class="pricing-table-button">
-										<a href="" class="button white border">Join Now</a>
+										<a href="tel:+353893206963" class="button white border">Call Now</a>
 									</div> <!-- end .pricing-table-button -->
 								</div> <!-- end .inner -->
 							</div> <!-- end .pricing-table -->
@@ -471,23 +471,23 @@
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
-											<span>€400</span>
+											<span>€100</span>
 										</div> <!-- end .inner -->
 									</div> <!-- end .pricing-table-price -->
 									<div class="pricing-table-heading">
-										Unlimited<small>Monthly Fee</small>
+										Full Test <small>Package</small>
 									</div> <!-- end .pricing-table-heading -->
 									<div class="pricing-table-features">
 										<ul class="list-unstyled">
-											<li>Free Form To Sign</li>
-											<li>5 Month Course</li>
-											<li>35 Video Classes</li>
-											<li>6 Hours Per Day</li>
-											<li>Weekly 3 Tests</li>
+											<li>1 LESSON</li>
+											<li>Car hire for test</li>
+											<li>Pre-test preparation</li>
+											<li>Free Vehicle Check</li>
+											<li>Route familiarisation</li>
 										</ul>
 									</div> <!-- end .pricing-table-features -->
 									<div class="pricing-table-button">
-										<a href="" class="button white border">Join Now</a>
+										<a href="tel:+353893206963" class="button white border">Call Now</a>
 									</div> <!-- end .pricing-table-button -->
 								</div> <!-- end .inner -->
 							</div> <!-- end .pricing-table -->
@@ -570,7 +570,7 @@
 					<div class="col-sm-4">
 						<div class="widget">
 							<h5>About</h5>
-							<p>DrivePro is the best driving school. We have well trained instructors. DrivePro is the best driving school.</p>
+							<p>Looking for a professional driving school, you are in the right place. Many students have passed their licence test with us first go. We are an experienced driving school and we want to ensure that you can pass your driving test first go.  </p>
 							<div class="social-icons">
 								<div class="social-icon"><a href="https://www.facebook.com/profile.php?id=100089476627037"><i class="fa fa-facebook"></i></a></div>
 									<div class="social-icon"><a href="https://instagram.com/masterdrivingschool.ie?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></div>
@@ -580,40 +580,36 @@
 							</div> <!-- end .social-icons -->
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-3 -->
-					<div class="col-sm-2 col-sm-offset-1">
+					<div class="col-sm-4" style="text-align:center;">
 						<div class="widget">
 							<h5>Pages</h5>
 							<ul class="list-unstyled">
-								<li><a href="">Home </a></li>
-								<li><a href="">Gallery</a></li>
-								<li><a href="">Contact Us</a></li>
-								<li><a href=""></a>About Us</li>
-								<li><a href="">RSA Approved</a></li>
+								<li><a href="index.html">Home </a></li>
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="contact-page.html">Contact Us</a></li>
+								<li><a href="about-us.html"></a>About Us</li>
+								<li><a href="https://www.rsa.ie/services/learner-drivers/driving-lessons/find-an-instructor/approved-driving-instructor">RSA Approved (Search: "Master Driving School")</a></li>
 							</ul>
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-2 -->
-					<div class="col-sm-4">
+					<div class="col-sm-4" >
 						<div class="widget">
 							<h5>Latest Post</h5>
 							<div class="latest-post clearfix">
-								<img src="images/latest01.jpg" alt="alt" class="img-responsive">
 								<div>
-									<h6><a href="">Tips To Drive Safe</a></h6>
-									<span>Jan 5, 2014</span>
+									<h6><a href="">1. Pre-test Q&A </a></h6>
 								</div>
-							</div> <!-- end .latest-post -->
-							<div class="latest-post clearfix">
-								<img src="images/latest02.jpg" alt="alt" class="img-responsive">
 								<div>
-									<h6><a href="">We Like Races Here</a></h6>
-									<span>Jan 5, 2014</span>
+									<h6><a href="">2. Rules & Signs </a></h6>
 								</div>
-							</div> <!-- end .latest-post -->
-							<div class="latest-post clearfix">
-								<img src="images/latest03.jpg" alt="alt" class="img-responsive">
 								<div>
-									<h6><a href="">Defensive Course</a></h6>
-									<span>Jan 5, 2014</span>
+									<h6><a href="">3. Hand Signals </a></h6>
+								</div>
+								<div>
+									<h6><a href="">4. Vehicle Check</a></h6>
+								</div>
+								<div>
+									<h6><a href="">5. Result feedback form </a></h6>
 								</div>
 							</div> <!-- end .latest-post -->
 						</div> <!-- end .widget -->
