--- a/contact-page.html
+++ b/contact-page.html
@@ -206,76 +206,61 @@
 
 		<!-- Footer -->
 		<footer class="footer blue">
+			<br/><br/>
 			<div class="container">
-				<br/><br/>
 				<div class="row">
-					<div class="col-sm-3">
+					<div class="col-sm-4">
 						<div class="widget">
 							<h5>About</h5>
-							<p>DrivePro is the best driving school. We have well trained instructors. DrivePro is the best driving school.</p>
+							<p>Looking for a professional driving school, you are in the right place. Many students have passed their licence test with us first go. We are an experienced driving school and we want to ensure that you can pass your driving test first go.  </p>
 							<div class="social-icons">
-								<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-								<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-								<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-								<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
+								<div class="social-icon"><a href="https://www.facebook.com/profile.php?id=100089476627037"><i class="fa fa-facebook"></i></a></div>
+									<div class="social-icon"><a href="https://instagram.com/masterdrivingschool.ie?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></div>
+									<div class="social-icon"><a href="https://api.whatsapp.com/send?phone=%2B353873206963&app=facebook&entry_point=page_cta&fbclid=IwAR0S56Y9G8kRLUN9rTW8NoKBMtx_k-aCOW4h5f2A12L2hEFMrv5HA4HeJ-w"><i class="fa fa-whatsapp"></i></a></div>
+									<div class="social-icon"><a href="https://www.linkedin.com/services/page/a28b23321204851685/"><i class="fa fa-linkedin"></i></a></div>
+
 							</div> <!-- end .social-icons -->
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-3 -->
-					<div class="col-sm-2 col-sm-offset-1">
+					<div class="col-sm-4" style="text-align:center;">
 						<div class="widget">
-							<h5>Categories</h5>
+							<h5>Pages</h5>
 							<ul class="list-unstyled">
-								<li><a href="">Driving</a></li>
-								<li><a href="">Exam</a></li>
-								<li><a href="">Instruction</a></li>
-								<li><a href="">Instructor</a></li>
-								<li><a href="">License</a></li>
+								<li><a href="index.html">Home </a></li>
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="contact-page.html">Contact Us</a></li>
+								<li><a href="about-us.html"></a>About Us</li>
+								<li><a href="https://www.rsa.ie/services/learner-drivers/driving-lessons/find-an-instructor/approved-driving-instructor">RSA Approved (Search: "Master Driving School")</a></li>
 							</ul>
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-2 -->
-					<div class="col-sm-3">
+					<div class="col-sm-4" >
 						<div class="widget">
 							<h5>Latest Post</h5>
 							<div class="latest-post clearfix">
-								<img src="images/latest01.jpg" alt="alt" class="img-responsive">
 								<div>
-									<h6><a href="">Tips To Drive Safe</a></h6>
-									<span>Jan 5, 2014</span>
+									<h6><a href="">1. Pre-test Q&A </a></h6>
 								</div>
-							</div> <!-- end .latest-post -->
-							<div class="latest-post clearfix">
-								<img src="images/latest02.jpg" alt="alt" class="img-responsive">
 								<div>
-									<h6><a href="">We Like Races Here</a></h6>
-									<span>Jan 5, 2014</span>
+									<h6><a href="">2. Rules & Signs </a></h6>
 								</div>
-							</div> <!-- end .latest-post -->
-							<div class="latest-post clearfix">
-								<img src="images/latest03.jpg" alt="alt" class="img-responsive">
 								<div>
-									<h6><a href="">Defensive Course</a></h6>
-									<span>Jan 5, 2014</span>
+									<h6><a href="">3. Hand Signals </a></h6>
+								</div>
+								<div>
+									<h6><a href="">4. Vehicle Check</a></h6>
+								</div>
+								<div>
+									<h6><a href="">5. Result feedback form </a></h6>
 								</div>
 							</div> <!-- end .latest-post -->
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-3 -->
-					<div class="col-sm-3">
-						<div class="widget">
-							<h5>Flickr</h5>
-							<div class="flickr clearfix">
-								<a href=""><img src="images/flickr01.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr02.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr03.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr04.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr05.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr06.jpg" alt="alt" class="img-responsive"></a>
-							</div>
-						</div> <!-- end .widget -->
-					</div> <!-- end .col-sm-3 -->
+
 				</div> <!-- end .row -->
-				<div class="copyright">&copy; 2015 DrivePro All Rights Reserved.</div>
+				<div class="copyright">&copy; 2023 Master Driving School All Rights Reserved.</div>
 			</div> <!-- end .container -->
-		</footer> <!-- copy end .footer -->
+		</footer> <!-- end .footer -->
 
 		<!-- jQuery -->
 		<script src="js/jquery-1.11.2.min.js"></script>
