--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Drive Pro : Driving School PSD Template</title>
+
+		<meta name="driving school" content="rsa, adi, instructor, edt, full licence, driving test,full licence, rsa approved, driving lessons, affordable driving school, reduced edt">
+		<meta name="location" content="carlow, kilkenny, laois, portlaoise, athy, tullow, ireland, abbeyleix, stradbally, castlecomer, mountmellick, portarlington, ballon, borris, thomastown, gowran">
+
+		<title>Master Driving School</title>
 
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +60,7 @@
 		<header class="header">
 
 			<div class="container clearfix">
-				<div class="logo"><a href="index.html"><img src="images/logo_mds.png" alt="Drive Pro"></a></div>
+				<div class="logo"><a href="index.html"><img src="images/master_school.jpeg" alt="Master Driving School"></a></div>
 				<div class="header-contacts">
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-map-marker"></i></div>
@@ -441,7 +445,7 @@
 							</div> <!-- end .pricing-table -->
 						</div> <!-- end .col-sm-4 -->
 						<div class="col-sm-3">
-							<div class="pricing-table dark">
+							<div class="pricing-table green">
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
@@ -467,7 +471,7 @@
 							</div> <!-- end .pricing-table -->
 						</div> <!-- end .col-sm-4 -->
 						<div class="col-sm-3">
-							<div class="pricing-table dark">
+							<div class="pricing-table orange">
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
