--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Drive Pro : Driving School PSD Template</title>
+		<title>Master Driving School</title>
 
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,23 +54,24 @@
 
 		<!-- Header -->
 		<header class="header">
+
 			<div class="container clearfix">
-				<div class="logo"><a href="index.html"><img src="images/logo.png" alt="Drive Pro"></a></div>
+				<div class="logo"><a href="index.html"><img src="images/master_school.jpeg" alt="Drive Pro"></a></div>
 				<div class="header-contacts">
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-map-marker"></i></div>
-						Design Street, Australia
+						R93W5T7
 					</div>  <!-- end .header-contact -->
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-envelope"></i></div>
-						Info@Defatch.com
+						k.joseph007@gmail.com
 					</div>  <!-- end .header-contact -->
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-phone"></i></div>
-						+123 456 789
+						+353 873206963
 					</div>  <!-- end .header-contact -->
 				</div> <!-- end .header-contacts -->
-				<a href="" class="responsive-menu-open">Menu <i class="fa fa-bars"></i></a>
+				<a href="" class="responsive-menu-open"> <i class="fa fa-bars"></i></a>
 			</div> <!-- end .container -->
 
 			<div class="main-header clearfix">
@@ -86,23 +87,6 @@
 
 				</div> <!-- end .container -->
 			</div>
-
-			<div class="page-title transparent" style="background-image: url('images/gallery_image.jpg');">
-				<div class="inner">
-					<h3>Gallery</h3>
-				</div> <!-- end .inner -->
-			</div> <!-- end .page-title -->
-			<div class="breadcrumbs">
-				<div class="container">
-					<span class="breadcrumbs-page-title">Gallery</span>
-					<nav class="breadcrumbs-nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>Gallery</li>
-						</ul>
-					</nav> <!-- end .breadcrumbs-nav -->
-				</div> <!-- end .container -->
-			</div> <!-- end .breadcrumbs -->
 		</header> <!-- end .header -->
 		<div class="responsive-menu">
 			<a href="" class="responsive-menu-close">Close <i class="fa fa-times"></i></a>
