--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
 		<header class="header">
 
 			<div class="container clearfix">
-				<div class="logo"><a href="index.html"><img src="images/master_school.jpeg" alt="Drive Pro"></a></div>
+				<div class="logo"><a href="index.html"><img src="images/master_school.jpeg" alt="Master Driving School"></a></div>
 				<div class="header-contacts">
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-map-marker"></i></div>
@@ -64,11 +64,11 @@
 					</div>  <!-- end .header-contact -->
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-envelope"></i></div>
-						k.joseph007@gmail.com
+						<a style="color:#fff" href="mailto:k.joseph007@gmail.com">k.joseph007@gmail.com</a>
 					</div>  <!-- end .header-contact -->
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-phone"></i></div>
-						+353 873206963
+						<a style="color:#fff" href="tel:+353 873206963">+353 873206963</a>
 					</div>  <!-- end .header-contact -->
 				</div> <!-- end .header-contacts -->
 				<a href="" class="responsive-menu-open"> <i class="fa fa-bars"></i></a>
@@ -220,7 +220,7 @@
 								<li><a href="index.html">Home </a></li>
 								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="contact-page.html">Contact Us</a></li>
-								<li><a href="about-us.html"></a>About Us</li>
+								<li><a href="about-us.html">About Us</a></li>
 								<li><a href="https://www.rsa.ie/services/learner-drivers/driving-lessons/find-an-instructor/approved-driving-instructor">RSA Approved (Search: "Master Driving School")</a></li>
 							</ul>
 						</div> <!-- end .widget -->
