--- a/about-us.html
+++ b/about-us.html
@@ -230,19 +230,16 @@
 							<h5>Latest Post</h5>
 							<div class="latest-post clearfix">
 								<div>
-									<h6><a href="">1. Pre-test Q&A </a></h6>
+									<h6><a href="/pdf/RSA_Test_QnA.pdf">1. Pre-test Q&A </a></h6>
 								</div>
 								<div>
-									<h6><a href="">2. Rules & Signs </a></h6>
+									<h6><a href="https://www.rsa.ie/docs/default-source/road-safety/r1---rules-of-the-road/ruleoftheroad_book-for-web.pdf?sfvrsn=b5d57830_7">2. Rules of The Road </a></h6>
 								</div>
 								<div>
 									<h6><a href="">3. Hand Signals </a></h6>
 								</div>
 								<div>
 									<h6><a href="">4. Vehicle Check</a></h6>
-								</div>
-								<div>
-									<h6><a href="">5. Result feedback form </a></h6>
 								</div>
 							</div> <!-- end .latest-post -->
 						</div> <!-- end .widget -->
