--- a/gallery.html
+++ b/gallery.html
@@ -98,12 +98,18 @@
 			<div class="inner">
 				<div class="container">
 					<!-- Gallery -->
+
 					<div class="heading text-center">
 						<h3>Gallery</h3>
 						<hr class="line" />
 						<span>Latest Pass Results</span>
 					</div> <!-- end .heading -->
 					<div class="gallery clearfix">
+						<div class="image overlay popup-link">
+							<a href="images/gallery01.png" data-lightbox-gallery="gallery1">
+								<img src="images/gallery05.jpg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
 						<div class="image overlay popup-link">
 							<a href="images/gallery01.png" data-lightbox-gallery="gallery1">
 								<img src="images/gallery01.png" alt="alt" class="img-responsive" >
@@ -120,12 +126,6 @@
 							</a>
 						</div>
 
-<!--						<div class="image">-->
-<!--							<img src="images/gallery04.jpg" alt="alt" class="img-responsive">-->
-<!--							<div class="overlay"></div>-->
-<!--							<a href="images/gallery04.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>-->
-<!--							<a href="" class="full-link"><i class="fa fa-link"></i></a>-->
-<!--						</div>-->
 <!--						<div class="image">-->
 <!--							<img src="images/gallery05.jpg" alt="alt" class="img-responsive">-->
 <!--							<div class="overlay"></div>-->
@@ -185,10 +185,10 @@
 									<h6><a href="https://www.rsa.ie/docs/default-source/road-safety/r1---rules-of-the-road/ruleoftheroad_book-for-web.pdf?sfvrsn=b5d57830_7">2. Rules of The Road </a></h6>
 								</div>
 								<div>
-									<h6><a href="">3. Hand Signals </a></h6>
+									<h6><a href="/pdf/MDS_Handsignals.pdf">3. Hand Signals </a></h6>
 								</div>
 								<div>
-									<h6><a href="">4. Vehicle Check</a></h6>
+									<h6><a href="/pdf/Preparing_your_Car_for_Driving_Test.pdf">4. Vehicle Check</a></h6>
 								</div>
 							</div> <!-- end .latest-post -->
 						</div> <!-- end .widget -->
