--- a/contact-page.html
+++ b/contact-page.html
@@ -229,10 +229,10 @@
 									<h6><a href="https://www.rsa.ie/docs/default-source/road-safety/r1---rules-of-the-road/ruleoftheroad_book-for-web.pdf?sfvrsn=b5d57830_7">2. Rules of The Road </a></h6>
 								</div>
 								<div>
-									<h6><a href="">3. Hand Signals </a></h6>
+									<h6><a href="/pdf/MDS_Handsignals.pdf">3. Hand Signals </a></h6>
 								</div>
 								<div>
-									<h6><a href="">4. Vehicle Check</a></h6>
+									<h6><a href="/pdf/Preparing_your_Car_for_Driving_Test.pdf">4. Vehicle Check</a></h6>
 								</div>
 							</div> <!-- end .latest-post -->
 						</div> <!-- end .widget -->
