--- a/gallery.html
+++ b/gallery.html
@@ -21,26 +21,7 @@
 
 		<!-- Favicons -->
 		<!-- Generated using http://realfavicongenerator.net/ -->
-		<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
-		<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="favicons/favicon-194x194.png" sizes="194x194">
-		<link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96">
-		<link rel="icon" type="image/png" href="favicons/android-chrome-192x192.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
-		<link rel="manifest" href="favicons/manifest.json">
 		<link rel="shortcut icon" href="favicons/favicon.ico">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
-		<meta name="msapplication-config" content="favicons/browserconfig.xml">
-		<meta name="theme-color" content="#ffffff">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -106,7 +87,27 @@
 					</div> <!-- end .heading -->
 					<div class="gallery clearfix">
 						<div class="image overlay popup-link">
-							<a href="images/gallery01.png" data-lightbox-gallery="gallery1">
+							<a href="images/ranjit.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/ranjit.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/tino.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/tino.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery_7.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_7.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery_8.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_8.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery05.png" data-lightbox-gallery="gallery1">
 								<img src="images/gallery05.jpg" alt="alt" class="img-responsive" >
 							</a>
 						</div>
