--- a/gallery.html
+++ b/gallery.html
@@ -86,6 +86,47 @@
 						<span>Latest Pass Results</span>
 					</div> <!-- end .heading -->
 					<div class="gallery clearfix">
+<!--						<div class="image overlay popup-link">-->
+<!--							<a href="images/gallery_15.jpeg" data-lightbox-gallery="gallery1">-->
+<!--								<img src="images/gallery_15.jpeg" alt="alt" class="img-responsive" >-->
+<!--							</a>-->
+<!--						</div>-->
+<!--						<div class="image overlay popup-link">-->
+<!--							<a href="images/gallery_15.jpeg" data-lightbox-gallery="gallery1">-->
+<!--								<img src="images/gallery_15.jpeg" alt="alt" class="img-responsive" >-->
+<!--							</a>-->
+<!--						</div>-->
+						<div class="image overlay popup-link">
+							<a href="images/gallery_14.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_14.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery_13.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_13.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery_12.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_12.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery_11.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_11.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery_10.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_10.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+						<div class="image overlay popup-link">
+							<a href="images/gallery_9.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/gallery_9.jpeg" alt="alt" class="img-responsive" >
+							</a>
+						</div>
+
 						<div class="image overlay popup-link">
 							<a href="images/ranjit.jpeg" data-lightbox-gallery="gallery1">
 								<img src="images/ranjit.jpeg" alt="alt" class="img-responsive" >
