--- a/gallery.html
+++ b/gallery.html
@@ -96,6 +96,67 @@
 <!--								<img src="images/gallery_15.jpeg" alt="alt" class="img-responsive" >-->
 <!--							</a>-->
 <!--						</div>-->
+
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_2.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_2.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_3.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_3.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_4.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_4.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_5.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_5.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_6.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_6.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_7.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_7.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_6.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_6.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_7.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_7.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_8.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_8.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_9.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_9.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_10.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_10.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
+<div class="image overlay popup-link">
+	<a href="images/a_gallery_11.jpeg" data-lightbox-gallery="gallery1">
+		<img src="images/a_gallery_11.jpeg" alt="alt" class="img-responsive" >
+	</a>
+</div>
 						<div class="image overlay popup-link">
 							<a href="images/gallery_14.jpeg" data-lightbox-gallery="gallery1">
 								<img src="images/gallery_14.jpeg" alt="alt" class="img-responsive" >
@@ -117,8 +178,8 @@
 							</a>
 						</div>
 						<div class="image overlay popup-link">
-							<a href="images/gallery_10.jpeg" data-lightbox-gallery="gallery1">
-								<img src="images/gallery_10.jpeg" alt="alt" class="img-responsive" >
+							<a href="images/a_gallery_1.jpeg" data-lightbox-gallery="gallery1">
+								<img src="images/a_gallery_1.jpeg" alt="alt" class="img-responsive" >
 							</a>
 						</div>
 						<div class="image overlay popup-link">
